--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -14,15 +14,15 @@
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <img src="img/movieBIGMOMMA.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">  
+            <img src="img/movieMIMI.jfif" alt="" class="posterimg" id="posterimg1">  
         </div>
         <div class="poster" id="poster3">
             <h1>Voorbeeld titel</h1>
-            <img src="img/voorbeeldposter.jpg" alt="" class="posterimg" id="posterimg1">
+            <img src="img/movieSpiderMAn.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
     </main>
     <footer>
