--- a/opdracht/website/index.html
+++ b/opdracht/website/index.html
@@ -13,15 +13,15 @@
     <main>
         <h1 id="titel">Top 3 best films ooit</h1>
         <div class="poster" id="poster1">
-            <h1>Voorbeeld titel</h1>
+            <h1>Big momma's house 2</h1>
             <img src="img/movieBIGMOMMA.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
         <div class="poster" id="poster2">
-            <h1>Voorbeeld titel</h1>
+            <h1>MIMI The Movie</h1>
             <img src="img/movieMIMI.jfif" alt="" class="posterimg" id="posterimg1">  
         </div>
         <div class="poster" id="poster3">
-            <h1>Voorbeeld titel</h1>
+            <h1>Spiderman Far From Home</h1>
             <img src="img/movieSpiderMAn.jpg" alt="" class="posterimg" id="posterimg1">
         </div>
     </main>
